Fixed overflowing about section content.

--- a/styles.scss
+++ b/styles.scss
@@ -21,10 +21,6 @@ body {
     color: cornsilk;
 }
 
-main {
-    background-color: $dark;
-}
-
 // Create an after pseudo element that adds a dark layer over image background
 
 // HOME SECTION
@@ -54,26 +50,37 @@ main {
 .home::before {
     content: "";
     background: url(images/cameraman.jpg) no-repeat center;
+    background-color: black;
     background-size: cover;
-    height: 110vh;
+    height: 120%;
     width: 100%;
     position: absolute;
     top: 0;
     left: 0;
     bottom: 0;
     right: 0;
-    opacity: 70%;
+    opacity: 50%;
+}
+
+.smoke-effect {
+    background-color: black;
+    height: 110vh;
 }
 
 // ABOUT SECTION
 
-.about {
+.about-section {
+    overflow-x: clip;
+}
+
+.about-content {
     text-align: center;
     position: relative;
     top: -90px;
     height: 70vh;
     background-color: $light;
     border-radius: 50% 50% 50% 50%;
+    transform: scaleX(1.1);
     h2 {
         padding: 30px 0 10px 0;
     }
